--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
 django-filter==23.2
-waitress
-mysqlclient
-django-storages 
-boto3
-coverage 
-whitenoise
-logging
-gunicorn
+waitress==2.1.2
+mysqlclient==2.2.1
+django-storages==1.14.2
+boto3==1.34.7
+coverage==7.3.4
+whitenoise==6.6.0
+logging==0.4.9.6
+gunicorn==21.2.0
